# ragindexer

./: .dockerignore  .gitignore  Architecture.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  Specification.md  all_tests.sh  docker-compose.yml  generate_doc.sh  main.py  pyproject.toml  sample.env
.github/workflows/: docker-image.yml
docs/: ChunkingService.md  DocumentParser.md  EmbeddingService.md  FileScanner.md  Settings.md  SyncManager.md  VectorDatabaseService.md
examples/: chunking_service_example.py  document_parser_example.py  embedding_service_example.py  file_scanner_example.py  settings_example.py  sync_manager_example.py  vector_database_example.py
sample_docs/: example.txt
src/ragindexer/: ChunkingService.py  DocumentIndexer.py  DocumentParser.py  EmbeddingService.py  FileScanner.py  Orchestrator.py  QdrantIndexer.py  Settings.py  SyncManager.py  VectorDatabaseService.py  __init__.py  config.py  index_database.py
src/ragindexer/documents/: ADocument.py  DocDocument.py  DocumentFactory.py  MarkdownDocument.py  PdfDocument.py  XlsDocument.py
tests/: coverage.conf  test_chunking_service.py  test_document_parser.py  test_embedding_service.py  test_file_scanner.py  test_integration_pipeline.py  test_settings.py  test_slm.py  test_sync_manager.py  test_vector_database.py
