[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ragindexer"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "rich>=14.3.3",
    "PyPDF2>=3.0.1",
    "python-docx>=1.0.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "qdrant-client>=1.10.0",
    "watchdog>=4.0.0",
]

[project.urls]
"Bug Tracker" = "https://innersource.soprasteria.com/yann.blaudin/ragindexer/issues"
Homepage = "https://innersource.soprasteria.com/yann.blaudin/ragindexer"
Source = "https://innersource.soprasteria.com/yann.blaudin/ragindexer"

[tool.pdm.version]
source = "scm"

[dependency-groups]
dev = [
    "coverage-badge>=1.1.0",
    "ipython>=8.30.0",
    "pre-commit>=4.0.1",
    "black>=22.3.0",
]
doc = [
    "pdoc3>=0.11.3",
    "genbadge[all]>=1.1.1,<2.0.0",
    "docstr-coverage>=2.2.0",
]
test = [
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.14.0",
    "pytest-picked>=0.5.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-profiling>=1.8.1",
]

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--import-mode=importlib",
    "--html=htmldoc/tests/report.html",
    "--self-contained-html",
    "--junitxml=htmldoc/junit.xml",
    "--cov-config=tests/coverage.conf",
    "--cov=ragindexer",
    "--doctest-modules",

]
testpaths = [
    "tests/",
]
